update stock event sourcing app

--- a/stockevent/src/main/resources/application.properties
+++ b/stockevent/src/main/resources/application.properties
@@ -1,3 +1,16 @@
-spring.url=
-spring.app.username=
-spring.app.password=
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=user
+
+app.rabbitmq.exchange=app.exchange
+app.rabbitmq.queue=app.queue
+app.rabbitmq.routingkey=app.routingkey
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
+spring.rabbitmq.listener.simple.retry.max-attempts=10
+spring.rabbitmq.listener.simple.retry.max-interval=30000
+spring.rabbitmq.listener.simple.retry.multiplier=3.0
+
+queue.name=appqueue
