stock data event sourcing updated

--- a/stockevent/src/main/resources/application.properties
+++ b/stockevent/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=user
 
+app.jwt.secretkey=
+app.jwt.expirationdays=
+
 app.rabbitmq.exchange=app.exchange
 app.rabbitmq.queue=app.queue
 app.rabbitmq.routingkey=app.routingkey
