--- a/stockevent/docker-compose.dev.yml
+++ b/stockevent/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
-  petclinic:
+  stockeventsourcing:
+    container_name: stockeventsourcing
     build:
       context: .
       target: development
@@ -9,25 +10,23 @@ services:
       - "8080:8080"
     environment:
       - SERVER_PORT=8080
-      - MYSQL_URL=jdbc:mysql://mysqlserver/petclinic
+      - POSTGRESQL_URL=jdbc:postgresql://postgresql/stockeventsourcing
     volumes:
       - ./:/app
     depends_on:
-      - mysqlserver
+      - postgresqldb
 
-  mysqlserver:
-    image: mysql:8.0
+  postgresqldb:
+    image: postgres:14.1-alpine
     ports:
-      - "3306:3306"
+      - "5432:5432"
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
-      - mysql_data:/var/lib/mysql
-      - mysql_config:/etc/mysql/conf.d
+      - postgres_data:/var/lib/postgresql/data
 volumes:
-  mysql_data:
-  mysql_config:
+  postgres_data:
+    driver: local
+
+
